fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -220,14 +220,14 @@ footer nav a {
     text-decoration: none;
 }
 .box{
-   width: 40%;
+   width: 35%;
     margin: 1%;
 }
 .topof0 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between; 
-    
+    justify-content: space-evenly; 
+
     
 }  
 .boxtext{
@@ -265,6 +265,7 @@ footer nav a {
     padding: 2%;
     margin-bottom: 4%;
     margin-top: 3%;
+    
 }
 .gallery2 button{
     background-color: white;
